--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     // --- Configuration ---
 // Protocol is ws:// (unsecured) or wss:// (secured)
 // Use the IP address of your broker and its WebSocket port (e.g., 9001 for Mosquitto)
-const brokerUrl = 'wss://innovanext.ddns.net:8884'; // Replace with your broker's WebSocket URL
-
-const options = {
+const brokerUrl = 'wss://innovanext.ddns.net:8884', {
     clientId: 'mqtt-web-client-' + Math.random().toString(16).substr(2, 8),
     // Add your username and password here
     username: 'sankar_mqtt',
-    password: 'sankar@2006'
+    password: 'sankar@2006',
+    protocolVersion: 4, // MQTT v3.1.1
+    reconnectPeriod: 2000,
 };
 
     // --- DOM Elements ---
